--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+[![Build Status](https://api.travis-ci.org/ccsb-scripps/Illustrate.svg?branch=master)](https://api.travis-ci.org/ccsb-scripps/Illustrate.svg?branch=master)
+[![License](https://img.shields.io/badge/License-Apache%202.0-blue.svg)](https://opensource.org/licenses/Apache-2.0)
 ******************************
      I L L U S T R A T E
   Biomolecular Illustration
